# agentgrep

./: .gitignore  Cargo.toml  README.md  devbox.json  flake.nix
bench-results/: STATUS-2026-07-05.md  bench_vs_rg.json  parity.json  profile-baseline-2026-07-05.md
bench-results/hyperfine/: jcode__common_literal__match.json  jcode__common_literal__paths_only.json  jcode__dash_literal__match.json  jcode__dash_literal__paths_only.json  jcode__glob_md__match.json  jcode__glob_md__paths_only.json  jcode__hidden__match.json  jcode__hidden__paths_only.json  jcode__rare_literal__match.json  jcode__rare_literal__paths_only.json  jcode__regex_alternation__match.json  jcode__regex_alternation__paths_only.json  jcode__regex_class__match.json  jcode__regex_class__paths_only.json  jcode__type_rs__match.json  jcode__type_rs__paths_only.json  jcode__zero_match_literal__match.json  jcode__zero_match_literal__paths_only.json  linux__common_literal__match.json  linux__common_literal__paths_only.json  linux__dash_literal__match.json  linux__dash_literal__paths_only.json  (+32 more)
docs/: ARCHITECTURE.md  BENCHMARKS.md  HARNESS_CONTEXT.md  IMPLEMENTATION_PLAN.md  INTERFACE.md  QUERY_INTENT.md  SMART_OUTPUT.md
scripts/: bench_cases.py  bench_vs_rg.py  bench_vs_rg.sh  benchmark.sh  benchmark_matrix.sh  generate_synthetic_corpus.py  parity_vs_rg.py  parity_vs_rg.sh  smoke.sh
src/: cli.rs  context.rs  find.rs  lib.rs  main.rs  outline.rs  render.rs  search.rs  smart_dsl.rs  smart_engine.rs  structure.rs  workspace.rs
tests/: nonutf8_adversarial_probe.rs  nonutf8_collision.rs
