[package]
name = "agentgrep"
version = "0.1.0"
edition = "2024"
description = "CLI-first code search and retrieval for agents"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
