[package]
name = "agentgrep"
version = "0.1.1"
edition = "2024"
description = "CLI-first code search and retrieval for agents"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"
